feat: checking in a mern example solution.

--- a/nx.json
+++ b/nx.json
@@ -1,31 +1,26 @@
 {
-  "npmScope": "nx-tools-example",
-  "affected": {
-    "defaultBase": "master"
-  },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
+  "affected": { "defaultBase": "main" },
+  "npmScope": "nx-tools-example",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
-  "projects": {}
+  "projects": {
+    "mern-example-service": { "tags": [] },
+    "mern-example-app": { "tags": [] },
+    "mern-example-app-e2e": {
+      "tags": [],
+      "implicitDependencies": ["mern-example-app"]
+    }
+  }
 }
