--- a/package.json
+++ b/package.json
@@ -26,15 +26,73 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nrwl/tao": "11.5.2",
+    "@abgov/core-css": "^0.7.56",
+    "@abgov/nx-adsp": "^1.2.4",
+    "@abgov/nx-oc": "^1.2.1",
+    "@abgov/react-components": "^0.7.56",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
     "@nrwl/cli": "11.5.2",
+    "@nrwl/cypress": "11.5.2",
+    "@nrwl/eslint-plugin-nx": "11.5.2",
+    "@nrwl/express": "^11.5.2",
+    "@nrwl/jest": "11.5.2",
+    "@nrwl/linter": "11.5.2",
+    "@nrwl/node": "11.5.2",
+    "@nrwl/react": "^11.5.2",
+    "@nrwl/tao": "11.5.2",
+    "@nrwl/web": "11.5.2",
     "@nrwl/workspace": "11.5.2",
+    "@testing-library/react": "11.1.2",
+    "@types/express": "4.17.0",
+    "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/passport": "^1.0.6",
+    "@types/passport-anonymous": "^1.0.3",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "@types/react-redux": "7.1.11",
+    "@types/react-router-dom": "~5.1.7",
+    "@types/redux-mock-store": "~1.0.2",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "babel-jest": "26.2.2",
+    "cypress": "^6.0.1",
     "dotenv": "8.2.0",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "html-webpack-plugin": "~4.5.2",
+    "jest": "26.2.2",
+    "oidc-client": "~1.11.5",
+    "prettier": "2.2.1",
+    "react-router-dom": "~5.2.0",
+    "redux-mock-store": "~1.5.4",
+    "redux-oidc": "~4.0.0-beta1",
+    "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
-    "typescript": "~4.0.3",
-    "prettier": "2.2.1"
+    "typescript": "~4.0.3"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "1.4.0",
+    "core-js": "^3.6.5",
+    "document-register-element": "1.13.1",
+    "express": "4.17.1",
+    "jwks-rsa": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-anonymous": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "tslib": "^2.0.0"
   }
 }
