update pipeline configuration to require dotnet5 agent and to use https repo url.

--- a/.openshift/Jenkinsfile
+++ b/.openshift/Jenkinsfile
@@ -4,7 +4,7 @@ def affectedApps = []
 pipeline {
   agent {
     node {
-      label 'node12'
+      label 'node12-dotnet5'
     }
   }
   parameters {
