feat: adding a github actions based pipeline.

--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,8 @@
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
-    "nx.json": "*"
+    "nx.json": "*",
+    ".github/workflows/pipeline.yml": "*"
   },
   "affected": { "defaultBase": "main" },
   "npmScope": "nx-tools-example",
