--- a/.openshift/environments.yml
+++ b/.openshift/environments.yml
@@ -11,13 +11,13 @@ items:
       kind: ClusterRole
       name: 'system:image-puller'
     subjects:
-      - kind: ServiceAccount
-        name: deployer
-        namespace: dio-sandbox
+      - apiGroup: rbac.authorization.k8s.io
+        kind: Group
+        name: 'system:serviceaccounts:dio-sandbox'
   - apiVersion: rbac.authorization.k8s.io/v1
     kind: RoleBinding
     metadata:
-      name: jenkins_edit
+      name: pipeline_edit
       namespace: dio-sandbox
     roleRef:
       apiGroup: rbac.authorization.k8s.io
@@ -25,5 +25,5 @@ items:
       name: edit
     subjects:
       - kind: ServiceAccount
-        name: jenkins
+        name: github-actions
         namespace: dio-sandbox
