--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@abgov/core-css": "^0.7.56",
     "@abgov/nx-adsp": "^1.3.0",
     "@abgov/nx-dotnet": "^1.0.0",
-    "@abgov/nx-oc": "^1.3.0",
+    "@abgov/nx-oc": "^1.4.0-beta.5",
     "@abgov/react-components": "^0.7.56",
     "@babel/core": "7.9.6",
     "@babel/preset-env": "7.9.6",
