--- a/.openshift/Jenkinsfile
+++ b/.openshift/Jenkinsfile
@@ -58,12 +58,10 @@ pipeline {
             }
           }
         }
+        sh 'npm prune --production'
       }
     }
     stage('Deploy Dev') {
-      input {
-        message "Promote to Dev?"
-      }
       steps {
         script {
           openshift.withCluster() {
